[gd_scene load_steps=5 format=3 uid="uid://d147gi367cq2n"]

[ext_resource type="Texture2D" uid="uid://neenseyxaknv" path="res://assets/ships_saucer.png" id="1_1x4jh"]
[ext_resource type="Script" path="res://enemy/enemy_ship_saucer.gd" id="1_ficab"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7571u"]
atlas = ExtResource("1_1x4jh")
region = Rect2(12, 500, 72, 72)

[sub_resource type="CircleShape2D" id="CircleShape2D_kqyb4"]
radius = 36.0

[node name="CharacterBody2d" type="CharacterBody2D"]
script = ExtResource("1_ficab")

[node name="ShipsSaucer" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("AtlasTexture_7571u")

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kqyb4")

[node name="GunPositions" type="Node2D" parent="."]

[node name="Marker2d" type="Marker2D" parent="GunPositions"]
position = Vector2(-32, -1)

[node name="Marker2d2" type="Marker2D" parent="GunPositions"]
position = Vector2(-10, 30)

[node name="Marker2d9" type="Marker2D" parent="GunPositions"]
position = Vector2(-5, 32)

[node name="Marker2d10" type="Marker2D" parent="GunPositions"]
position = Vector2(5, 32)

[node name="Marker2d11" type="Marker2D" parent="GunPositions"]
position = Vector2(10, 30)

[node name="Marker2d12" type="Marker2D" parent="GunPositions"]
position = Vector2(15, 28)

[node name="Marker2d13" type="Marker2D" parent="GunPositions"]
position = Vector2(32, -1)

[node name="Marker2d14" type="Marker2D" parent="GunPositions"]
position = Vector2(31, -7)

[node name="Marker2d15" type="Marker2D" parent="GunPositions"]
position = Vector2(30, -14)

[node name="Marker2d16" type="Marker2D" parent="GunPositions"]
position = Vector2(26, -20)

[node name="Marker2d17" type="Marker2D" parent="GunPositions"]
position = Vector2(22, -24)

[node name="Marker2d18" type="Marker2D" parent="GunPositions"]
position = Vector2(17, -27)

[node name="Marker2d3" type="Marker2D" parent="GunPositions"]
position = Vector2(-15, 28)

[node name="Marker2d4" type="Marker2D" parent="GunPositions"]
position = Vector2(-17, -27)

[node name="Marker2d5" type="Marker2D" parent="GunPositions"]
position = Vector2(-22, -24)

[node name="Marker2d6" type="Marker2D" parent="GunPositions"]
position = Vector2(-26, -20)

[node name="Marker2d7" type="Marker2D" parent="GunPositions"]
position = Vector2(-30, -14)

[node name="Marker2d8" type="Marker2D" parent="GunPositions"]
position = Vector2(-31, -7)

[node name="GunTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[connection signal="timeout" from="GunTimer" to="." method="_on_gun_timer_timeout"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_teleport_timer_timeout"]
